# villa_manipulation

./: tags
manipulation_tutorials/: CMakeLists.txt
manipulation_tutorials/scripts/: arm_message.py  open_hinged_door.py
villa_manipulation/: CMakeLists.txt  package.xml
villa_manipulation/scripts/: handover_activity.py
